Moved to Official DAQ, with multiplexer testing file

--- a/platformio.ini
+++ b/platformio.ini
@@ -11,4 +11,11 @@
 [env:black_f407ve]
 platform = ststm32
 board = black_f407ve
-framework = stm32cube
+framework = arduino
+upload_protocol = stlink
+debug_tool = stlink
+
+build_flags = 
+    -D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC
+    -D USBCON
+
