--- a/platformio.ini
+++ b/platformio.ini
@@ -14,8 +14,7 @@ board = black_f407ve
 framework = arduino
 upload_protocol = stlink
 debug_tool = stlink
-
 build_flags = 
-    -D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC
-    -D USBCON
-
+	-D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC
+	-D USBCON
+lib_deps = adafruit/DHT sensor library@^1.4.6
